fix some of the spacing inconsistencies with the menu

--- a/skin/frontend/wsu_base/connections.store.wsu.edu/css/custom.css
+++ b/skin/frontend/wsu_base/connections.store.wsu.edu/css/custom.css
@@ -54,6 +54,7 @@ section#siteID{
 .quick-access .links,
 .quick-access .links li{
 	display:inline-block;
+	position: relative;
 }
 .quick-access .links
 li{
@@ -70,15 +71,45 @@ li{
     top: 87px;
 	z-index:100;
 }
-
+body:not(.home) .quick-access:before{
+    width: 0;
+    height: 0;
+    border-top: 36px solid #da1a33;
+    border-left: 100px solid transparent;
+    position: absolute;
+    top: 7px;
+    right: 2px;
+    z-index: 0;
+    content: "";
+}
+body:not(.home) .quick-access .links:first-of-type:after{
+    transform: skew(20deg);
+    -webkit-transform: skew(20deg);
+    -moz-transform: skew(20deg);
+    -ms-transform: skew(20deg);
+    -o-transform: skew(20deg);
+    background-color: #eff0f1;
+position: absolute;
+    top: 1px;
+    right: 100%;
+    z-index: 0;
+    max-width: 260px;
+    width: 100%;
+    height: 35px;
+    content: "";
+	content:"";
+}
 .quick-access .links a{
 	color:#ddd;
 	background:none;
-    position: relative;
+    /*position: relative;*/
 	height:32px;
 	color:#FFFFFF;
-	display:inline-block;
-	content:"";
+	/*display:inline-block;*/
+	line-height: 37px;
+}
+body:not(.home) .quick-access .links a{
+	padding-left: 8px;
 }
 .quick-access .links a span{
 	width:100%;
@@ -92,6 +123,14 @@ li{
     font-size: 15px;
 	padding:0px 5px;
 }
+body:not(.home) .quick-access .links  li{
+    margin-right: 4px;
+}
+body:not(.home) .quick-access .links a span{
+    padding-left: 22px;
+}
+
+
 .quick-access .links a:before{
     transform: skew(20deg);
     -webkit-transform: skew(20deg);
@@ -129,8 +168,14 @@ li{
 	
 	color:#39424b;
 	z-index:1;
-}
 
+}
+body:not(.home) .quick-access .links a span:before{
+	margin-right: 7px;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
 /*%--home--%*/
 .home .quick-access{
 	background:none;
@@ -203,6 +248,7 @@ li{
     top: 23px;
     font-size: 50px;
 	z-index:1;
+	margin-right: 0px;
 }
 
 /*%--icons--%*/
